--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ position:relative;
 <body style="background-color:Gray">
 <div id="wrapper">
 
-<header id="header"><img src="image/welcomelittle one!.png" width="1024" height="200" alt=""/></header>
+<header id="header"><img src="image/welcomelittle-one!.jpg" width="1024" height="200" alt=""/></header>
 
 <nav id="nav" style="font-size:14pt;color:blue" >
   <ul> 
